# music-platform

./: .dockerignore  .gitignore  Containerfile  README.md  docker-compose.yml  launch.sh  media  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  db.py  main.py  models.py
app/services/: backfill.py  generation.py  health.py  indexer.py  ingest.py  library.py
app/static/: app.js  styles.css
app/templates/: index.html  status.html
docs/: API.md  ARCHITECTURE.md  METADATA_RULES.md  OPERATIONS.md
scripts/: ingest.py  run_remote.sh  sync_music_folders.sh
tests/: conftest.py  test_backfill.py  test_generation.py  test_health.py  test_ingest.py  test_playlists_api.py
