[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "music-platform"
version = "0.1.0"
description = "Production-style music platform for Suno + MusicGen"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
